--- a/server/.env
+++ b/server/.env
@@ -2,13 +2,13 @@
 
 # Database Credentials
 # Databse Host
-DB_HOST=localhost
+DB_HOST=society_app_database
 
 # Database Port
 DB_PORT=27017
 
 # Database Username
-DB_USERNAME=societyAdminUser
+DB_USERNAME=societydbUserAdminRW
 
 # Database Password
 DB_PASSWORD=12345678
@@ -18,15 +18,15 @@ DB_NAME=societydb
 
 
 # Secret Key
-SECRET_KEY=<SECRET_KEY>
+SECRET_KEY=societydb
 
 
 # JWT Tokens
 # Access Token Expiration Time
-ACCESS_TOKEN_EXPIRATION=<ACCESS_TOKEN_EXPIRATION>
+ACCESS_TOKEN_EXPIRATION=1d
 
 # Refersh Token Expiration Time
-REFRESH_TOKEN_EXPIRATION=<REFRESH_TOKEN_EXPIRATION>
+REFRESH_TOKEN_EXPIRATION=1d
 
 
 # Email Credentials
